# kapsule

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  AGENTS.md  CMakeLists.txt  PLAN.md  README.md  blog-post-2.md  blog-post.html  blog-post.md  compile_commands.json  meson.build  meson_options.txt  mkosi.conf  mkosi.postinst  pyproject.toml  sysext.sh
.github/instructions/: ci-context.md  general.instructions.md  models.instructions.md
data/: kapsule-flatpak-wrapper.sh  kapsule-install-branch.sh  kapsule-uninstall-branch.sh  kapsule.conf  nvidia-container-hook.sh  openapi.yaml
data/dbus/system/: org.kde.kapsule.conf  org.kde.kapsule.service
data/modules-load.d/: kapsule.conf
data/profiles/: kapsule-base.yaml
data/systemd/system/: kapsule-daemon.service
data/systemd/system-preset/: 50-kapsule.preset
data/systemd/system/incus.service.d/: kapsule-log-dir.conf
data/systemd/system/incus.socket.d/: kapsule-socket-group.conf
data/systemd/user/flatpak-session-helper.service.d/: kapsule-host-command.conf
docs/: ARCHITECTURE.md
images/: build-image.sh  generate-metadata.py  generate-simplestreams.py  mkosi.conf  package-incus.sh  upload-images.sh
images/archlinux/: image.yaml  kapsule.yaml
images/kapsule-dev/: image.yaml  kapsule.yaml
images/kapsule-dev/overlay/etc/skel/.config/: kde-builder.yaml
images/mkosi.images/archlinux/: mkosi.conf  mkosi.finalize  mkosi.prepare
images/mkosi.images/archlinux/mkosi.extra/.kapsule/init/: 50-pacman-keyring
images/mkosi.images/archlinux/mkosi.extra/.kapsule/sync/: dns  locale
images/mkosi.images/kapsule-dev/: mkosi.build.chroot  mkosi.conf  mkosi.finalize  mkosi.prepare.chroot
images/mkosi.images/kapsule-dev/mkosi.extra/etc/profile.d/: local-bin.sh
images/shared/sync/: dns  locale  timezone
kde/: CMakeLists.txt  meson.build
kde/libkapsule-qt/: CMakeLists.txt
scripts/: build-image.sh  dev-build.sh  generate_dbus_introspection.py  kapsule-init.sh  kapsule.in  prepare_enter_foreground.py  test_incus_client.py  update_incus_models.py
src/: __init__.py
src/cli/: CMakeLists.txt  __init__.py  daemon_client.py  decorators.py  incus_client.py  main.cpp  main.py  output.cpp  output.h
src/daemon/: __init__.py  __main__.py  container_options.py  container_service.py  dbus_types.py  host_config_sync.py  incus_client.py  models_generated.py  operations.py  pipeline.py  profile.py  progress_tracker.py  service.py
src/daemon/container/: __init__.py  config_helpers.py  constants.py  contexts.py  service.py
src/daemon/container/create/: __init__.py  build_config.py  create_instance.py  file_capabilities.py  host_network.py  run_init_scripts.py  session_mode.py  sync_host_config.py  udev_database.py
src/daemon/container/post_create/: __init__.py  file_capabilities.py  host_network.py  session_mode.py
src/daemon/container/user_setup/: __init__.py  configure_sudo.py  create_account.py  enable_linger.py  mark_mapped.py  mount_custom.py  mount_home.py  mount_host_dirs.py
src/kapsule/cli/: __init__.py  main.py
src/kcm/: CMakeLists.txt  containerlistmodel.cpp  containerlistmodel.h  createschemamodel.cpp  createschemamodel.h  kcm_kapsule.cpp  kcm_kapsule.h  kcm_kapsule.json
src/kcm/ui/: CreateContainerPage.qml  main.qml
src/libkapsule-qt/: CMakeLists.txt  container.cpp  container.h  kapsuleclient.cpp  kapsuleclient.h  types.cpp  types.h
sysext/: mkosi.build.chroot  mkosi.conf
sysext/mkosi.extra/etc/profile.d/: kapsule-startfolder.sh
sysext/mkosi.extra/usr/lib/extension-release.d/: extension-release.kapsule
sysext/mkosi.images/base/: mkosi.conf
tests/integration/: conftest.py  helpers.sh  run-tests.sh  test-audio-sockets.sh  test-dbus-socket.sh  test-display-sockets.sh  test-host-config-sync.sh  test-host-mounts.sh  test-image-refresh.sh  test-mount-options.sh  test-nested-containers.sh  test-osc777-enter.sh  test-profile-sync.sh  test_progress_signals.py
